<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/left_guideline"
        app:layout_constraintGuide_percent=".25"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/right_guideline"
        app:layout_constraintGuide_percent=".75"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/top_guideline"
        app:layout_constraintGuide_percent=".0"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_guideline"
        app:layout_constraintGuide_percent="1"
        android:orientation="horizontal"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/top_guideline"
        app:layout_constraintBottom_toBottomOf="@id/btnSeasons"
        android:text="@string/app_name"
        android:textSize="@dimen/appTitleSize"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/colorTitle"
        />

    <Button
        android:id="@+id/btnSeasons"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintVertical_weight="1"
        android:layout_gravity="center"
        android:background="@color/colorButton"
        android:textColor="@color/colorButtonText"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/tvTitle"
        app:layout_constraintBottom_toBottomOf="@id/btnDrivers"
        android:text="@string/btnSeasonsText"
        />

    <Button
        android:id="@+id/btnDrivers"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintVertical_weight="1"
        android:layout_gravity="center"
        android:background="@color/colorButton"
        android:textColor="@color/colorButtonText"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/btnSeasons"
        app:layout_constraintBottom_toBottomOf="@id/btnConstructors"
        android:text="@string/btnDriversText"
        />

    <Button
        android:id="@+id/btnConstructors"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintVertical_weight="1"
        android:layout_gravity="center"
        android:background="@color/colorButton"
        android:textColor="@color/colorButtonText"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/btnDrivers"
        app:layout_constraintBottom_toBottomOf="@id/btnCircuits"
        android:text="@string/btnConstructorsText"
        />

    <Button
        android:id="@+id/btnCircuits"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintVertical_weight="1"
        android:layout_gravity="center"
        android:background="@color/colorButton"
        android:textColor="@color/colorButtonText"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/btnConstructors"
        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
        android:text="@string/btnCircuitsText"
        />
</androidx.constraintlayout.widget.ConstraintLayout>